--- a/constrained_arma.ipynb
+++ b/constrained_arma.ipynb
@@ -68,7 +68,7 @@
     "$$z_t = \\varphi \\cdot z_{t-1} + \\varepsilon_t + \\theta \\cdot \\varepsilon_{t-1}$$\n",
     "\n",
     "The $AR(\\infty)$ form of the above process can be written in the form:\n",
-    "$$\\varepsilon_t = z_t - \\beta (1-\\gamma) \\sum_{i=1}^{\\infty} \\gamma^i z_{t-i}$$\n",
+    "$$\\varepsilon_t = z_t + \\beta (1-\\gamma) \\sum_{i=1}^{\\infty} \\gamma^i z_{t-i}$$\n",
     "\n",
     "where, $$\\gamma=-\\theta$$ and $$\\beta=\\frac{\\phi+\\theta}{1+\\theta}< 0$$\n",
     "\n",
